src/objects/CH_WorkgroupServiceContractAssociation__c.object
<CustomObject>
    <fields>
        <fullName>CH_Duplicate_Check__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <label>Duplicate Check</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CH_ServiceContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ServiceContract.RecordType.Name</field>
                <operation>equals</operation>
                <value>CARE Service Contract</value>
            </filterItems>
            <filterItems>
                <field>ServiceContract.CH_CA_ServiceContract_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Workgroup Service Contract Associations</relationshipLabel>
        <relationshipName>Workgroup_Service_Contract_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Workgroup__c</fullName>
        <label>Workgroup</label>
        <referenceTo>CH_Workgroup__c</referenceTo>
        <relationshipLabel>Workgroup Service Contract Associations</relationshipLabel>
        <relationshipName>Workgroup_Service_Contract_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workgroup Service Contract Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WSC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workgroup Service Contract Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>